// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bag page View should not render SFL section 1`] = `
<div
  className="test"
>
  <Styled(Row)
    tagName="header"
  >
    <Styled(Col)
      className="left-sec"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      onClick={[Function]}
    >
      <Styled(Heading)
        className="bag-header activeHeader"
        color="text.primary"
        component={null}
        dataLocator=""
        fontSize="fs16"
        textAlign="left"
        variant="h6"
      >
        undefined (10)
      </Styled(Heading)>
    </Styled(Col)>
    <Styled(Col)
      className="left-sec"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      onClick={[Function]}
    >
      <Styled(Heading)
        className="bag-header bag-header-sfl "
        color="text.primary"
        component={null}
        dataLocator=""
        fontSize="fs16"
        textAlign="left"
        variant="h6"
      >
        undefined (undefined)
      </Styled(Heading)>
    </Styled(Col)>
  </Styled(Row)>
  <Styled(CnCTemplate)
    bagActions={[Function]}
    isNonEmptySFL={false}
    leftSection={[Function]}
    showAccordian={false}
    showLeftSection={true}
  />
</div>
`;

exports[`Bag page View should render Added to Bag view section 1`] = `
<div
  className="test"
>
  <Styled(Row)
    tagName="header"
  >
    <Styled(Col)
      className="left-sec"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      onClick={[Function]}
    >
      <Styled(Heading)
        className="bag-header activeHeader"
        color="text.primary"
        component={null}
        dataLocator=""
        fontSize="fs16"
        textAlign="left"
        variant="h6"
      >
        undefined (10)
      </Styled(Heading)>
    </Styled(Col)>
    <Styled(Col)
      className="left-sec"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      onClick={[Function]}
    >
      <Styled(Heading)
        className="bag-header bag-header-sfl "
        color="text.primary"
        component={null}
        dataLocator=""
        fontSize="fs16"
        textAlign="left"
        variant="h6"
      >
        undefined (undefined)
      </Styled(Heading)>
    </Styled(Col)>
  </Styled(Row)>
  <Styled(CnCTemplate)
    bagActions={[Function]}
    isNonEmptySFL={false}
    leftSection={[Function]}
    showAccordian={false}
    showLeftSection={true}
  />
</div>
`;

exports[`Bag page View should render SFL section 1`] = `
<div
  className="test"
>
  <Styled(Row)
    tagName="header"
  >
    <Styled(Col)
      className="left-sec"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      onClick={[Function]}
    >
      <Styled(Heading)
        className="bag-header activeHeader"
        color="text.primary"
        component={null}
        dataLocator=""
        fontSize="fs16"
        textAlign="left"
        variant="h6"
      >
        undefined (10)
      </Styled(Heading)>
    </Styled(Col)>
    <Styled(Col)
      className="left-sec"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      onClick={[Function]}
    >
      <Styled(Heading)
        className="bag-header bag-header-sfl "
        color="text.primary"
        component={null}
        dataLocator=""
        fontSize="fs16"
        textAlign="left"
        variant="h6"
      >
        undefined (1)
      </Styled(Heading)>
    </Styled(Col)>
  </Styled(Row)>
  <Styled(CnCTemplate)
    bagActions={[Function]}
    isNonEmptySFL={true}
    leftSection={[Function]}
    showAccordian={false}
    showLeftSection={true}
  />
</div>
`;
